[gd_scene load_steps=2 format=3 uid="uid://c4xqam7n2q8k5"]

[ext_resource type="Script" path="res://src/ui/MainMenu.gd" id="1_mainmenu"]

[node name="MainMenu" type="CanvasLayer" groups=["main_menu"]]
process_mode = 3
layer = 99
script = ExtResource("1_mainmenu")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "RESTAURANT FLOWS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Manage your restaurant, serve customers, and grow your business"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="SettingsButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="CreditsButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Quit"
